Version 0.3.0 (2018-)

Version 0.2.9 (2018-06-22)
- Material Icons and HASS-help now open in new tab instead of modal (Issues #85 and #34) @danielperna84
- Open file by URL (Issue #95) @danielperna84
- Added ENFORCE_BASEPATH option (Issue #68) @danielperna84
- Cosmetic fix for scaled viewports @danielperna84
- Added search-function for entities (Issue #99) @danielperna84
- Updated Ace Editor to 1.3.3
- Updated jQuery to 3.3.1
- Updated js-yaml to 3.12.0

Version 0.2.8 (2018-04-23)
- Updated CDN libraries @jmart518
- Cosmetic improvements @jmart518
- Added event observer @danielperna84

Version 0.2.7 (2018-03-30)
- Setting SO_REUSEADDR on socket for proper restarts
- Using Threading to handle multiple connections
- New VERIFY_HOSTNAME option to block requests without correct host header
- Fixed filebrowser hiding (Issue #79)

Version 0.2.6 (2018-01-31)
- Displaying current filename in title (Issue #76) @danielperna84
- Added menu item to open configurator in new tab (Issue #76) @danielperna84
- Automatically load last viewed (and not closed) file via localStorage @danielperna84
- CTRL+s / CMD+s can now be used to save files @danielperna84
- Prompting before saving now opt-in in editor settings (Issue #77) @danielperna84

Version 0.2.5 (2018-01-27)
- Added warning-logs for access failure @danielperna84
- Added transparency to whitespace characters @danielperna84
- Using external repository for Docker @Munsio
- Modify BANNED_IPS and ALLOWED_NETWORKS at runtime @danielperna84
- Use relative paths in webserver @danielperna84
- Added "Sesame" feature @danielperna84

Version 0.2.4 (2018-01-02)
- Added YAML linting @AtoxIO
- Added IPv6 support @danielperna84

Version 0.2.3 (2017-11-12)
- Switched away from removed bootstrap API @danielperna84
- Added homeassistant-trigger @danielperna84

Version 0.2.2 (2017-11-01)
- Added option to list directories first @dimagoltsman
- Updated dependencies @jmart518

Version 0.2.1 (2017-10-12)
- Added script reloading
