@@ -14,5 +14,6 @@
     "IGNORE_PATTERN": [],
     "DIRSFIRST": false,
     "SESAME": null,
-    "VERIFY_HOSTNAME": null
+    "VERIFY_HOSTNAME": null,
+    "ENV_PREFIX": "HC_"
 }
